# provider-python

./: CLAUDE.md  README.md
.github/workflows/: publish.yaml  release.yaml
docs/: ARCHITECTURE.md  PITFALLS.md  PLAN.md
sdk/: buf.gen.yaml  buf.yaml  pyproject.toml
sdk/src/t0_provider_sdk/api/ivms101/v1/ivms/: enum_pb2.py  ivms101_pb2.py
sdk/src/t0_provider_sdk/api/tzero/v1/common/: common_pb2.py  payment_method_pb2.py  payment_method_pb2.pyi  payment_receipt_pb2.py
sdk/src/t0_provider_sdk/api/tzero/v1/payment/: network_pb2.py  provider_pb2.py  provider_pb2.pyi
sdk/src/t0_provider_sdk/api/tzero/v1/payment_intent/provider/: provider_pb2.py
sdk/src/t0_provider_sdk/api/tzero/v1/payment_intent/recipient/: recipient_pb2.py
sdk/src/t0_provider_sdk/provider/: __init__.py  handler.py
starter/: pyproject.toml
starter/src/t0_provider_starter/: cli.py
starter/src/t0_provider_starter/template/src/provider/: main.py
tests/cross_test/go_helper/: go.mod  main.go
